[package]
name = "mux-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mux manifest v1 helpers: build MUX_MANIFEST_JSON for edge workers from resolved environment."
repository = "https://github.com/tschk/ark-protocol"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
